--- a/index.html
+++ b/index.html
@@ -125,4 +125,8 @@ html => hypertext markup language.
     <h1>keep trying learn cading</h1>
     <p>i need to do</p>
     <p>this is a trick of success</p>
+    <button>new style button</button>
+    <input type="text">
+    <br>
+    <button>click me baby!!!</button>
 </div>
