--- a/index.html
+++ b/index.html
@@ -129,4 +129,5 @@ html => hypertext markup language.
     <input type="text">
     <br>
     <button>click me baby!!!</button>
+    <button>new style button</button>
 </div>
